# fuzzy_subsets

./: .env  EPA-only_keys.csv  README.md  codeinventory.json  contributing.md  pyproject.toml  readme.md  requirements.txt
Licenses/: LICENSE.md
data/: constants.py  element_lists.py  feature_name_lists.py  padel_all_descriptor_names.xlsx  uninterpretable_features.csv
docs/: pipeline_trial.drawio  submodels2.drawio
docs/original_patch_files/: backup.py  diff_feature_selector.py  shelved.patch  shelved2.patch  shelved3.patch  shelved4.patch  shelved5.patch
notebooks/: bivariate_selection.py  clean_new_epa_data.py  clustering_viz.py  dataset_creation.py  dmso_hyperparameter_part_two.py  dmso_hyperparameter_part_two_dir_changes.py  dmso_test_set.py  dmso_workflow.py  enamine_sfs.py  epa_enamine_visualizer.py  epa_multiclass.py  feature_analysis.py  feature_performance.py  feature_selection_plots.py  feature_selection_script.py  grove_feature_selection.py  maxmin_picker.pyi  maxmin_picker_original.pyi  mi_scratch.py  model_selection_epa_multiclass.py  proto_grove.py  qsar_api.py  random_groves.py  resplit_data.py  toxcast_20mM_profiling.py  vapor_pressure_selection.py  viz.py
notebooks/archive/: bivariate_selection.py  cross_model_analysis.py  dataset_visualize.py  dmso_hyperparameter_part_two.py  dmso_hyperparameter_part_two_dir_changes.py  dmso_workflow.py  enamine_sfs.py  epa_multiclass.py  (+8 more)
qsar_modeling/: __init__.py  set_environ.py
reports/: DMSO Solubility Update - Oct9.pptx
tests/: codeinventory.json  test_importance.py  test_qsar_readiness.py
(+68 files in other folders)
