[tool.poetry]
name = "dmso-solubility"
version = "0.1.0"
description = ""
authors = ["MMANNING <manning.matthew@epa.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
imblearn = "^0.0"
matplotlib = "^3.9.2"
stats = "^0.1.2a0"
plotly = "^5.24.1"
statsmodels = "^0.14.4"
urllib3 = "^2.3.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
